add missing matrix for l9

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -19,6 +19,7 @@ jobs:
         include:
           - laravel: 9.*
             testbench: 7.*
+            carbon: ^2.53
           - laravel: 10.*
             testbench: 8.*
             carbon: ^2.63
