--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
     },
     "require-dev": {
         "laravel/pint": "^1.0",
-        "nunomaduro/collision": "^7.9",
-        "nunomaduro/larastan": "^2.0.1",
+        "nunomaduro/collision": "^5.11|^6.0|^7.9",
+        "nunomaduro/larastan": "^1.0|^2.0.1",
         "orchestra/testbench": "^7.0|^8.0",
         "pestphp/pest": "^1.21|^2.0",
         "pestphp/pest-plugin-laravel": "^1.1|^2.0",
