--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/contracts": "^9.28|^10.0",
+        "illuminate/contracts": "^9.28|^10.0|^11.0",
         "spatie/laravel-package-tools": "^1.14.0",
         "yethee/tiktoken": "^0.1.2"
     },
