--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/contracts": "^9.28|^10.0|^11.0",
+        "illuminate/contracts": "^9.28|^10.0|^11.0|^12.0",
         "spatie/laravel-package-tools": "^1.14.0",
-        "yethee/tiktoken": "^0.1.2"
+        "yethee/tiktoken": "^0.7.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
